unpackaged/main/default/objects/CommissionRule__c/CommissionRule__c.object-meta.xml
<CustomObject>
    <label>Commission Rule</label>
    <nameField>
        <displayFormat>CMRL-{0}</displayFormat>
        <label>Commission Rule ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Rules</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>