unpackaged/main/default/objects/CommissionRule__c/fields/MinPercentTarget__c.field-meta.xml
<CustomField>
    <fullName>MinPercentTarget__c</fullName>
    <label>Min % Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>