unpackaged/main/default/objects/CommissionRule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <formula>(IF(ISBLANK(SalesPerson__c),
  9,
  0
)*10000000) +
(CASE(TEXT(Division__c),
  "IT", 1,
  "Software", 2,
  "Data Services", 3,
  "Academy", 4,
  "PLM", 5,
  "Solid Edge", 6,
  9
)*1000000) +
(CASE(TEXT(CustomerType__c),
  "New", 1,
  "Existing", 2,
  9
)*100000) +
(CASE(TEXT(BusinessType__c),
  "New", 1,
  "Renewal", 2,
  9
)*10000) +
(CASE(TEXT(ProductType__c),
  "Software", 1,
  "Hardware", 2,
  "Maintenance", 3,
  "Services", 4,
  "Support", 5,
  9
)*1000) +
(MinPercentTarget__c * 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>