unpackaged/main/default/objects/CommissionRule__c/fields/RuleType__c.field-meta.xml
<CustomField>
    <fullName>RuleType__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>